Bug 1741596 - Wait for SendMsg in msgMapiHook.cpp to prevent ~nsMsgComposed being called before sending finishes. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D131577

--HG--
extra : amend_source : 87536c8876597dc5aef2aea9b43da2a6c0a1d6d9